<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title">Beygingarlýsing íslensks nútímamáls</string>
    <string name="titleSmall">Stofnun Árna Magnússonar í íslenskum fræðum</string>
    <string name="background_desc">Bakgrunns bje</string>
    <string name="aboutTitle">Um beygðu</string>
    <string name="search_desc">Leitarmynd</string>
    <string name="aboutText">Upprunalegt markmið við gerð Beygingarlýsingar íslensks nútímamáls (BÍN) var að koma upp beygingarlýsingu á tölvutæku formi sem nýtast mætti til máltækniverkefna af ýmsu tagi, í orðabókargerð og við málfræðirannsóknir. Jafnframt var markmiðið að gera Beygingarlýsinguna aðgengilega fyrir almenning á vefnum.
Þessi markmið stangast að nokkru leyti á. Í máltækni er lykilatriði að gögnin innihaldi öll málbrigði til þess að koma að fullum notum. Gögnin þurfa að duga til að greina hvað sem er, líka það sem ekki er talið gullaldarmál. Notendur BÍN á vefnum ætlast hins vegar oftar en ekki til þess að fá leiðbeiningar um rétt mál og rangt. Hér er á ferðinni munurinn á lýsandi og vísandi málfræði (forskriftarmálfræði) en eins og nafnið bendir til þá er BÍN í megindráttum lýsandi. Til þess að koma til móts við notendur vefsíðunnar sem vilja vanda mál sitt eru athugasemdir með leiðbeiningum og skýringum fyrir ofan beygingardæmin en í beygingarrammanum sjálfum birtast allar beygingarmyndirnar athugasemdalausar, þótt þeim sé oft og tíðum raðað eftir gildi. Nánar um BÍN í máltækni og beygingardæmin.</string>
    <string name="searchInput">Hvað viltu finna?</string>
    <string name="buttonSearch">Leita</string>
    <string name="title_activity_beygingar">BeygingarActivity</string>
    <string name="title_activity_table_test">TableTest</string>
    <string name="title_activity_about">AboutActivity</string>

    
    <!-- Action Bar -->
    <string name="app_name">Beygðu</string>
    <string name="about">Um Beygðu</string>
    <string name="action_search">Um beygðu</string>
    <string name="action_mail">Senda Póst</string>
    <string name="action_refresh">Endurhlaða</string>
    <!-- Table activity strings -->
	    <string name="tableTitle">Nafn á orði</string>
	    <string name="eintala">Eintala</string>
	    <string name="fleirtala">Fleirtala</string>
	    <string name="a_gr">án greinis</string>
	    <string name="m_gr">með greini</string>
	    <string name="nf">Nf.</string>
	    <string name="tf">Þf.</string>
	    <string name="tgf">Þgf.</string>
	    <string name="ef">Ef.</string>
		
	    <string name="fyrsta_pers">1.pers</string>
	    <string name="onnur_pers">2.pers</string>
	    <string name="thridja_pers">3.pers</string>
	    
	    <string name="lo_kk">KK</string>
	    <string name="lo_kvk">KVK</string>
	    <string name="lo_hk">HK</string>
    
    <!-- Dialog -->
	    <string name="choosedialog">Smelltu á það orð sem þú vilt sjá: </string>
	    <string name="afram">Áfram</string>
	    <string name="cancel">Hætta við</string>
    
    <!-- json test -->
	    <string name="title_activity_json">title_activity_json</string>
	    <string name="jsontest">jsontest</string>
	    <string name="title_activity_handle_xml">HandleXML</string>
    
    
    

	   <string name="location">Location</string>
	   <string name="country">Country:</string>
	   <string name="temperature">Temperature:</string>
	   <string name="humidity">Humidity:</string>
	   <string name="pressure">Pressure:</string>
	   <string name="weather">Weather</string>

</resources>