<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.beygdu.MainActivity" >
	
	<!-- Menu items stuck on action bar -->
    <item android:id="@+id/action_mail"
          android:icon="@drawable/ic_action_mail"
          android:title="@string/action_mail"
          android:showAsAction="always"/>
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:background="#ff0000"
          android:title="@string/action_search"
          android:showAsAction="always"/>
    <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_refresh"
          android:showAsAction="always"/>
    <!-- Menu items stuck on action bar  ENDS -->
    
    
    <!-- Items in menu -->
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/tabs"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/jsontest"/>
    <!-- Items in menu ENDS -->
</menu>
