<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bin.Main" >

    <TextView
        android:id="@+id/title"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="15dp"
		android:textSize="40sp"
		android:text="@string/title"
		android:textColor="@color/navy"
		/>

    <EditText
        android:id="@+id/mainSearch"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="50dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/searchInput"
        android:inputType="number"
        android:paddingLeft="40dp" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/commitSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mainSearch"
        android:layout_alignRight="@+id/mainSearch"
        android:background="@drawable/button"
        android:onClick="btnOnClick"
        android:text="@string/buttonSearch" />
 
</RelativeLayout>

