<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/table_no"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white" >

    <!-- Leitarorð -->

    <!-- Eintala/fleirtala -->

    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:padding="10dp"
        android:paddingLeft="20dp"
        android:text="description"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <!-- með og án greini -->

    <TableRow
        style="@style/BodyRow"
        android:background="@drawable/tableborder" >
    
        <TextView
            style="@style/BodyText"
            android:layout_weight="0.2"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="10dip"
            android:width="0px" />
        <TextView
            style="@style/BodyText"
            android:layout_weight="0.4"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/a_gr"
            android:width="0px" />
        <TextView
            style="@style/BodyText"
            android:layout_weight="0.4"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/m_gr"
            android:width="0px" />
    </TableRow>

    <!-- nf, þf, þgf, ef -->
    <!-- Nefnifall -->

    <TableRow
        style="@style/BodyRow"
        android:background="@drawable/tableborder" >

        <TextView
            android:id="@+id/nf"
            style="@style/BodyText"
            android:layout_weight="0.2"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/nf"
            android:width="0px" />
        <TextView
            android:id="@+id/cell00"
            style="@style/BodyText"
            android:layout_weight="0.4"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="7dp"
            android:text="Cell 0,0"
            android:textColor="@color/navy"
            android:width="0px" />
        <TextView
            android:id="@+id/cell01"
            style="@style/BodyText"
            android:layout_weight="0.4"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="7dp"
            android:text="Cell 0,1"
            android:textColor="@color/navy"
            android:width="0px" />
    </TableRow>

    <!-- Þolfall -->

    <TableRow
        style="@style/BodyRow"
        android:background="@drawable/tableborder" >

        <TextView
            android:id="@+id/tf"
            style="@style/BodyText"
            android:layout_weight="0.2"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/tf"
            android:width="0px" />
        <TextView
            android:id="@+id/cell10"
            style="@style/BodyText"
            android:layout_weight="0.4"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="7dp"
            android:text="Cell 1,0"
            android:textColor="@color/navy"
            android:width="0px" />
        <TextView
            android:id="@+id/cell11"
            style="@style/BodyText"
            android:layout_weight="0.4"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="7dp"
            android:text="Cell 1,1"
            android:textColor="@color/navy"
            android:width="0px" />
    </TableRow>

    <!-- Þágufall -->

    <TableRow
        style="@style/BodyRow"
        android:background="@drawable/tableborder" >

        <TextView
            android:id="@+id/tgf"
            style="@style/BodyText"
            android:layout_weight="0.2"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/tgf"
            android:width="0px" />
        <TextView
            android:id="@+id/cell20"
            style="@style/BodyText"
            android:layout_weight="0.4"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="7dp"
            android:text="Cell 2,0"
            android:textColor="@color/navy"
            android:width="0px" />
        <TextView
            android:id="@+id/cell21"
            style="@style/BodyText"
            android:layout_weight="0.4"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="7dp"
            android:text="Cell 2,1"
            android:textColor="@color/navy"
            android:width="0px" />
    </TableRow>

    <!-- Eignarfall -->

    <TableRow
        style="@style/BodyRow"
        android:background="@drawable/tableborder" >

        <TextView
            android:id="@+id/ef"
            style="@style/BodyText"
            android:layout_weight="0.2"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/ef"
            android:width="0px" />
        <TextView
            android:id="@+id/cell30"
            style="@style/BodyText"
            android:layout_weight="0.4"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="7dp"
            android:text="Cell 3,0"
            android:textColor="@color/navy"
            android:width="0px" />
        <TextView
            android:id="@+id/cell31"
            style="@style/BodyText"
            android:layout_weight="0.4"
            android:background="@drawable/noborder"
            android:gravity="center"
            android:padding="7dp"
            android:text="Cell 3,1"
            android:textColor="@color/navy"
            android:width="0px" />
    </TableRow>
    
</TableLayout>